@@ -1,21 +1,29 @@
 MakeSlideShow = function(Folder, Style = getOption("BrailleR.SlidesCSS"), ContentsSlide = FALSE){
-if(dir.exists(Folder)){
-# find the CSS file wanted.
-StyleUsed=NULL
-if(file.exists(Style)){StyleUsed=Style}
-if(file.exists(paste0("./",Folder,"/",Style))){StyleUsed=paste0("./",Folder,"/",Style)}
 
-if(!is.null(StyleUsed)){
+if(dir.exists(Folder)){ # only continue if the folder specified exists
+
+# find the CSS file wanted.
+StyleUsed=FindCSSFile(Style)
+if(file.exists(paste0("./",Folder,"/",Style))){StyleUsed = paste0("./",Folder,"/",Style)}
+
+if(!is.null(StyleUsed)){ # only continue if a css file was found
 # get lists of master slides and output slides
 MasterSlideSet=list.files(path="slides", pattern="Rmd", full.names=TRUE)
 SlideSet=gsub("slides/", "", MasterSlideSet)
 OutSet=gsub(".Rmd", ".html", SlideSet)
 # make temporary copy of slides
 file.copy(from=MasterSlideSet, to=SlideSet, overwrite=TRUE)
-
 if(ContentsSlide){
+cat("## Contents\n\n", file="00_Contents.Rmd")
 for(i in SlideSet){ # add contents link
+    cat("\n\n[contents](00_Contents.html)", file=i, append=TRUE)
+temp=readLines(i,  n=5)
+temp=temp[temp!=""]
+cat(paste0("#", temp[1], "\n\n"), file="00_Contents.Rmd", append=TRUE)
 }
+knit2html("00_Contents.Rmd", stylesheet= StyleUsed)
+file.remove("00_Contents.md")
+file.remove("00_Contents.Rmd")
 }
 
 for(i in 2:length(SlideSet)){ #  add back link
