@@ -1,16 +1,20 @@
 \name{Internal}
+\alias{FindCSSFile}
 \alias{GetAxisTicks}
 \alias{InQuotes}
 \title{Internal functions for the BrailleR package}
 \description{Some functions that probably weren't really necessary, but proved useful at some stage.}
 \usage{
+FindCSSFile(file)
+
+
 GetAxisTicks(x)
 
 InQuotes(x)
 }
 \arguments{
-  \item{x}{
-an object that is of the form needed by the internal function concerned.}
+ \item{x}{an object that is of the form needed by the internal function concerned.}
+\item{file}{a filename to look for in the user's css folder or locally.}
 }
 \details{
 \code{GetAxisTicks} is intended to create the sequence of values used on an axis.}
