@@ -1,7 +1,11 @@
 v0.23.7
 - WriteR() goes live. Does not make use of everything yet though.
 - updated some of the vignette files
-- added option for BrailleR.SlidesCSS in readiness for MakeSlideShow() function that will turn a series of Rmd files into a set of html slides.
+- added option for BrailleR.SlidesStyle in readiness for MakeSlideShow() function that will turn a series of Rmd files into a set of html slides.
+- fixed mismatch in BrailleR.Style option name.
+- added internal function that will seek the path of the desired css file for the user.
+- enhanced the SetupBrailleR() to copy css files
+
 
 v0.23.6
 - reinstated use of a local file for local settings
